tests/fixtures/functional_patterns/positive/p42_string_lines.rs
fn non_empty_lines(text: &str) -> Vec<String> {
    text.lines()
        .filter(|line| !line.is_empty())
        .map(String::from)
        .collect()
}
