tests/fixtures/functional_patterns/negative/n37_format_string.rs
fn create_message(name: &str) -> String {
    format!("Hello, {}", name)
}
